--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
     "@codemirror/lang-sql": "^6.6.3",
+    "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.12.1",
     "@uiw/react-codemirror": "^4.21.25",
     "axios": "^1.6.8",
