--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.12.1",
     "@uiw/react-codemirror": "^4.21.25",
     "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "next": "14.1.4",
     "next-auth": "5.0.0-beta.16",
     "pg": "^8.11.5",
